--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
     <title>S3 Tree</title>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script crossorigin src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script type="text/javascript" src="./dist/bundle.js"></script>
-    <link rel="icon" href="./assets/s3tree%20favicon%20logo.png" type="image/x-icon" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           type="text/css" rel="stylesheet" crossorigin="anonymous"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"/>
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <script type="text/javascript" src="./dist/bundle.js"></script>
     <link href="./assets/index.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
