--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <head>
     <title>S3 Tree</title>
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           type="text/css" rel="stylesheet" crossorigin="anonymous"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"/>
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
-    <script type="text/javascript" src="./dist/bundle.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="./dist/bundle.js"></script>
     <link href="./assets/index.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
