wip single-file mode

--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <head>
     <title>S3 Tree</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          type="text/css" rel="stylesheet" crossorigin="anonymous"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"/>
-    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
-    <script type="text/javascript" charset="UTF-8" src="./dist/bundle.js"></script>
-    <link href="./assets/index.css" type="text/css" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64,AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIzGLACEziwAjMYwA
+IzGKACIwiR4oNph3PEvNgERU5CVBUN8AQ1LgAEFR3wBDUeEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACgz
+iAAlMYoAJi+NACMxjBojMYxsIjCMyyY0lfg+TdP6RFPj00NS4HdDUuAhTlznAENS4ABDU98AAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAJTGNACswkAEjMYxYIzGMzSQzjPwoOoj/IzaD/jFDqv09Tcf/Q1Lf/kNS4NZD
+UuBoQ1LiBDFIeQAePBsAJUwcABYrFgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA3AAAmMosAJzGLBCMxjKojMIz/Kz2O/zhbgv8dPmX/EyxK
+/yU5b/9BUdf/Q1Hh/0JR3b9CTe4MAAUABAAAAAInSyEAN2YxAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAIjCNABgghQAnN44AOku9AENT3QBCUt8ASYRDADhhYAATAMQCIzGMqCIwjP8s
+Po7/MVJy/xIsSf8IGiz/HzFZ/0BR0P8/WqP/O11/yC5WQFIxYC2dL1ssZh09EwIjNXYAKTecAD1L
+0ABLWfIAQlHfAAAAAAAAAAAAAAAAACMxjAAiMY0AJTONACIvjxY1Qr8tQUj0FEct/wJBbXwARYwa
+BzptRiQjMoevIjCN/yo7iv8iN0v/ECQl/wscGv8cKk//QF2d/0eBU/8/dUzsQHhC5UB3Pv81XzHI
+Iz8nJSIupA8pN50sPErOGzpKywBDUuAAQ1LgAAAAAAAAAAAAIzGNACMxjgUiL41dM1N6xUp6fudD
+aJrKQFq2nD9crWdRhIJ3Wp1h1DlnX+slO33/L0t1/yVEMP82XjX/Mlsw/ydIPP9FeV//SIZH/0F7
+Q/9Bdj7/M10v/ytLKPkkOVW9ITF2wyg2luQ/TtfLQ1Lha0NR4QpDUeEAAAAAAAAAAAAiMYwAIjGM
+FiIvjNE3VYr/brCO/2avc/9Tkmv/UpFt/U2JZvlNkVL/TZNP/ztzTf88cFH/R4VF/0iBRv9AeDz/
+OHA1/z92PP81ZzL/MFwr/ypRJf8pSiL/KEYj/yZCLP8kQCz/KDpw/kBP2f9DUuHjRFLgJERS4AAA
+AAAAAAAAACIxjAAiMYwXIzGM0iUykv9Mb6X8d8J+/27Ab/9Yplj/VJ5S/0aLRf87ejr/NnEz/zZs
+Mf8zZC//L1wr/y9aKv8pUiT/I0cf/yhSIv8hRhz/JUsf/yA/Gv8fOhf/JD8h/yU9Pv8pOn/8QE/Y
+/kNS4eREUuAlRFLgAAAAAAAAAAAAIjGMACIxjBcjMYzSJDKR/0ZdvPxpnKn/VJVk/0SJRP85fzX/
+K2Qo/xxFGP8bQRj/HkIa/zRmL/8rVib/GjUW/y1WKP8qVSX/NWsv/zFgKv8wXij/JEUc/xwyFv8j
+Oyb/IzRf/yg2mvxAT9j+Q1Lh5ERS4CVEUuAAAAAAAAAAAAAiMYwAIjGMFyMxjNIlM5D/O0jO/E9p
+zf9mpIP/aLVo/2a9Yf9Il0P/J10j/ylfJv8uYiv/L2Ir/z57Of8qUyb/NmYv/zRoLP81aC7/NGMs
+/yRHG/8hPRn/HjUe/yU6Tf8kNX3/KDaa/EBP2P5DUuHkRFLgJURS4AAAAAAAAAAAACIxjAAiMYwX
+IzGM0iUzkP88Ssz8RVTg/1Zzz/9yrKL/bbp2/12xWf9ZqVP/RIhA/0WHQf8uXiv/KVgk/yhQI/8i
+RRv/MFso/0mBQf88bTb/HTgW/yZFHf8qTSX/LU40/yg+bf8oNpr8QE/Y/kNS4eREUuAlRFLgAAAA
+AAAAAAAAIjGMACIxjBcjMYzSJTOQ/zxKzPxDUuH/QlTT/0Vewf9NdaH/TYZ1/2e7Z/9mv2P/XrVb
+/1CaTv8wYC7/QHQ8/ztrNf9Ddzz/Q3g7/y5TJ/8iPRv/GzIa/x81Kf8kN03/JDOB/yg2mvxAT9j+
+Q1Lh5ERS4CVEUuAAAAAAAAAAAAAiMYwAIjGMFyMxjNIlM5D/PErM/ENS4f9Zfbn/baqM/262d/9f
+qWf/Y7Vi/2W9Yf9Yr1T/Qos+/zZvMv8/dDf/OGYv/zJbKP8sUCP/KEcf/zBRJ/8zUzP/L0lV/yU1
+gv8jMIz/KDaa/EBP2P5DUuHkRFLgJURS4AAAAAAAAAAAACIxjAAiMYwXIzGM0iUzkP88Ssz8Q1Lh
+/0la3v9bdtX/bZq//3e/lP9ktmL/S5dG/zqANf8ybCz/HUIW/x0+Fv8cORb/GTQV/xcvEv8VLA//
+HTUX/yxHM/8pPG3/IzGN/yMxi/8oNpr8QE/Y/kNS4eREUuAlRFLgAAAAAAAAAAAAIjGMACIxjBcj
+MYzSJTOQ/zxKzPxDUuH/Q1Hg/0JR3v9BVs7/R2i2/0iCZf9anlL/XalV/1acT/85bTL/HT0Y/zBa
+K/83aTL/KE8k/xkzE/8mRh7/KkBU/yU0hP8jMYz/IzGL/yg2mvxAT9j+Q1Lh5ERS4CVEUuAAAAAA
+AAAAAAAiMYwAIjGMFyMxjNIlM5D/PErM/ENS4f9DUuH/RVjW/1uOl/9lrnT/UJpT/0qRRf9NlkX/
+SpNB/0WFOv8qVSP/M2Is/zRlLf8sViX/K1Ef/y1PIv8oPFL/JDKF/yMxjP8jMYv/KDaa/EBP2P5D
+UuHkRFLgJURS4AAAAAAAAAAAACIxjAAiMYwXIzGM0iUzkP88Ssz8Q1Lh/0NS4P9DU+D/TGHa/1+G
+vf9aomf/SpRC/zd1MP8xain/NW0t/xs9Ff8mSR3/I0YZ/x08FP8gOxz/K0A9/y4/Zv8lNIb/IzGM
+/yMxi/8oNpr8QE/Y/kNS4eREUuAlRFLgAAAAAAAAAAAAIjGMACIxjBcjMYzSJTOQ/zxKzPxDUuH/
+Q1Lg/0NS4P9DUeD/QlnF/1CKdP9tvmX/ZK9f/1GOSv9Rkkr/Nmgw/yRJHf8oTiD/HToW/yQ9M/8l
+NnX/IzGN/yMxjP8jMYz/IzGL/yg2mvxAT9j+Q1Lh5ERS4CVEUuAAAAAAAAAAAAAiMYwAIjGMFyMx
+jNIlM5D/PErM/ENS4f9DUuD/Q1Lg/0RT3/9Zfar/Y6F2/12qWf9drlX/UZZJ/1OYSv9AfDf/LFYk
+/ytSIv8vUij/M09L/yc4fv8jMY3/IzGM/yMxjP8jMYv/KDaa/EBP2P5DUuHkRFLgJURS4AAAAAAA
+AAAAACIxjAAiMYwXIzGM0iUzkP88Ssz8Q1Lh/0NS4P9DUuD/Q1Lg/0dY3v9QZ9D/UXuY/zt7Ov9A
+gDf/M2wq/yhaH/8oTyD/I0If/yY7RP8nOXX/IzKL/yMxjP8jMYz/IzGM/yMxi/8oNpr8QE/Y/kNS
+4eREUuAlRFLgAAAAAAAAAAAAIjGMACIxjBcjMYzSJTOQ/zxKzPxDUuH/Q1Lg/0NS4P9DUuD/RFPd
+/0trsP9JdJT/R4Vc/2KsWv9Cfjz/L2Mp/z5zNv8tUir/IDgr/yg/X/8kMor/IzGM/yMxjP8jMYz/
+IzGL/yg2mvxAT9j+Q1Lh5ERS4CVEUuAAAAAAAAAAAAAiMYwAIjGMFyMxjNIlM5D/PErM/ENS4f9D
+UuD/Q1Lg/0NS4P9DUuD/PVC2/0Rsc/9OlFH/S5dE/z1+N/8zayv/M2Up/yVFJP8tQWH/KzqW/yQy
+jv8jMYz/IzGM/yMxjP8jMYv/KDaa/EBP2P5DUuHkRFLgJURS4AAAAAAAAAAAACIxjAAiMYwXIzGM
+0iUzkP88Ssz8Q1Lh/0NS4P9DUuD/Q1Lg/0JR3/8tOqn/Kz9+/z5uVv9Dh0D/R4lD/ydVIv8eQRb/
+Jz5K/z1MxP86SMj/JTOQ/yMxjP8jMYz/IzGM/yMxi/8oNpr8QE/Y/kNS4eREUuAlRFLgAAAAAAAA
+AAAAIjGMACIxjBcjMYzSJTOQ/zxKzP1DUuH/Q1Lg/0NS4P9DUuDyQlHe1yw6pOokM4r/PmJ7/2Gs
+ZP9js17/Qn86/zFXOv8+Uqv/Q1Lg/z1Lz+8lM5HVIzGM7yMxjP4jMYz/IzGL/yg2mv5AT9j/Q1Lh
+5ERS4CRDUuAAAAAAAAAAAAAiMYwAIjGMBiMxjGQlM5HLO0rM6kRS4dJDUuCmQ1LgckNS4UFATtYg
+JDKOrCMwjP8mNIz/X5KH/3DDav9Ghj7/PlqE/0NS3/9DUuD/QlHewS49qSYiMYo8IzGMbCMxjKAj
+MYvNKDaa6T9P19JEU+FzQ1LhC0NS4AAAAAAAAAAAACMxjAAiMYwAKTiUACc2mBs7Sss1RVPiGUNR
+3wVEU+AAQU/ZABEdUAIjMYyoIzGM/yIvjP8+WY//abBs/0J3Sf9CVb3/Q1Li/0NS4P9DUuC+R1bp
+DCo4ngAjMYwAIzOMAyIwihYpN5wzPEvPICAljQBDUuEAQ1LhAAAAAAAAAAAAAAAAACIwjgAbKYMA
+JjWWADtKywBEU+IAQ1HfAD9J3wAnNI8AKDSRBCMxjKgjMYz/IzGM/yk5jv9XiHD/Q2tr/0JR2f9D
+UuD/Q1Lg/0NS4L5CUt4NQlLfABozkgAjMowAIjCKACk3mwA9TNEASVnuAENS4QAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACc0jwAoNZAEIzGMqSMxjP8jMYz/IzCN
+/z5cef9GYpv/Q1Hh/0NS4P9DUuD/Q1Lgv0NS3g1DUt8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJzOOADA5jwEj
+MYxXIzGMzSMxjPwjMYz/KjqP/UBRyf1DUuH/Q1Lg/kNS4NZDUuBoQ1PeBENT3wAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAoNI8AJDKOACgwjQAiMYwaIzGMbCMxi8smNJX4PUzS+kNS4dNDUuB4Q1LgIVpYzgBDUeAA
+Q1HfAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhMYwAHzOMACMxjAAlM4oAIjCKHig2mHc8S82ARFTkJkNR
+3gBDUt8AQVHhAEJR4QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/8AD
+//+AAf//gAA//wAAP8AAAAOAAAABgAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAGAAAAB
+gAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAGAAAABwAAAA/+AAf//
+gAH//4AB///AA/8=" />
+<!--    <script type="text/javascript" charset="UTF-8" src="/dist/bundle.js"></script>-->
 </head>
 <body>
 <div id="root">Loading…</div>
