handle cors/auth errors, fix empty dir issue

--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <head>
     <title>S3 Tree</title>
+    <script>
+        // Global default config; uncomment/change lines as desired.
+        // Used to seed localStorage values (that then take precedence)
+        var S3IDX_CONFIG = {
+            // datetimeFmt: "YYYY-MM-DD HH:mm:ss",
+            // sizeFmt: "iso",
+            // eagerMetadata: false,
+            // ttl: "10h",
+            // pageSize: 20,
+            // s3PageSize: 1000,
+            // paginationInfoInURL: true,
+            // region: undefined,
+        }
+    </script>
 </head>
 <body>
 <div id="root">Loading…</div>
