--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 // Used to seed localStorage values (that then take precedence)
 var S3IDX_CONFIG = {
     // datetimeFmt: "YYYY-MM-DD HH:mm:ss",
-    // sizeFmt: "iso",
+    // sizeFmt: "iec",
     // eagerMetadata: false,
     // ttl: "10h",
     // pageSize: 20,
